--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,5 +11,8 @@ target_link_libraries(climbinggrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg)
 
 install(TARGETS climbinggrades ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
 
+#FIXME:hack for the icon on android
+install(FILES climbinggrades.svg DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/kirigami/icons)
+
 #include(KF5KirigamiMacros.cmake)
 kirigami_package_breeze_icons(ICONS documentinfo view-refresh)
