--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ set(climbinggrades_SRCS
 qt5_add_resources(RESOURCES resources.qrc)
 
 add_executable(climbinggrades ${climbinggrades_SRCS} ${RESOURCES})
-target_link_libraries(climbinggrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg)
+target_link_libraries(climbinggrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg Qt5::QuickControls2)
 
 install(TARGETS climbinggrades ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
 
