finish rename to klimbgrades

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(climbinggrades_SRCS
+set(klimbgrades_SRCS
     availablegradesmodel.cpp
     data.cpp
     main.cpp
@@ -7,13 +7,16 @@ set(climbinggrades_SRCS
 
 qt5_add_resources(RESOURCES resources.qrc)
 
-add_executable(climbinggrades ${climbinggrades_SRCS} ${RESOURCES})
-target_link_libraries(climbinggrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg Qt5::QuickControls2 KF5::ConfigCore)
+add_executable(klimbgrades ${klimbgrades_SRCS} ${RESOURCES})
+target_link_libraries(klimbgrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg Qt5::QuickControls2 KF5::ConfigCore)
 
-install(TARGETS climbinggrades ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS klimbgrades ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
 
-#FIXME:hack for the icon on android
-install(FILES climbinggrades.svg DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/kirigami.2/icons)
+if (ANDROID)
+    install(FILES klimbgrades.svg DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/kirigami.2/icons)
+else()
+    install(FILES klimbgrades.svg DESTINATION ${KDE_INSTALL_FULL_ICONDIR}/breeze/apps/48)
+endif()
 
 #include(KF5KirigamiMacros.cmake)
 kirigami_package_breeze_icons(ICONS documentinfo view-refresh edit-clear games-highscores)
