--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest package="org.kde.climbinggrades" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" android:versionCode="1" android:installLocation="auto">
-    <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Climbing Grades" android:icon="@drawable/icon">
+<manifest package="org.kde.klimbgrades" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" android:versionCode="1" android:installLocation="auto">
+    <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Klimbgrades" android:icon="@drawable/icon">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
                   android:name="org.qtproject.qt5.android.bindings.QtActivity"
-                  android:label="Climbing Grades"
+                  android:label="Klimbgrades"
                   android:theme="@style/AppTheme"
                   android:screenOrientation="unspecified"
                   android:windowSoftInputMode="adjustResize"
