--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(klimbgrades_SRCS
 qt5_add_resources(RESOURCES resources.qrc)
 
 add_executable(klimbgrades ${klimbgrades_SRCS} ${RESOURCES})
-target_link_libraries(klimbgrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg Qt5::QuickControls2 KF5::ConfigCore)
+target_link_libraries(klimbgrades Qt5::Core  Qt5::Qml Qt5::Quick Qt5::Svg KF5::ConfigCore)
 
 install(TARGETS klimbgrades ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
 
