--- a/org.kde.klimbgrades.desktop
+++ b/org.kde.klimbgrades.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Klimbgradesa
+Name=Klimbgrades
 Comment=Small application to quickly convert difficulty grades for rock climbing, lead and bouldering scales
 Exec=klimbgrades %u
 MimeType=application/x-klimbgrades;
