--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,14 @@
     SPDX-License-Identifier: BSD-2-Clause
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.kde.climbgrades"
+          package="org.kde.klimbgrades"
           android:versionName="0.1"
           android:versionCode="1"
           android:installLocation="auto">
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Climbgrades">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Klimbgrades">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
                   android:name="org.qtproject.qt5.android.bindings.QtActivity"
-                  android:label="Climbgrades"
+                  android:label="Klimbgrades"
                   android:windowSoftInputMode="adjustResize"
                   android:launchMode="singleTop">
 
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <meta-data android:name="android.app.lib_name" android:value="climbgrades"/>
+            <meta-data android:name="android.app.lib_name" android:value="klimbgrades"/>
             <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
             <meta-data android:name="android.app.repository" android:value="default"/>
             <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
