--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(klimbgrades)
 
 cmake_minimum_required(VERSION 3.0)
 set(KF5_MIN_VERSION "5.18.0")
-set(QT_MIN_VERSION "5.5.0")
+set(QT_MIN_VERSION "5.15.0")
 
 find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
 
@@ -14,7 +14,11 @@ include(KDECMakeSettings)
 include(ECMPoQmTools)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
-find_package(Qt5 ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui Svg QuickControls2)
+find_package(Qt${QT_MAJOR_VERSION} ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui Svg QuickControls2)
+
+if(NOT ANDROID)
+    find_package(Qt${QT_MAJOR_VERSION}Widgets REQUIRED)
+endif()
 
 find_package(KF5Config ${KF5_DEP_VERSION} "5.22.0")
 find_package(KF5Kirigami2 ${KF5_DEP_VERSION} "5.22.0")
