Add Android version handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-project(klimbgrades)
+cmake_minimum_required(VERSION 3.16)
 
-cmake_minimum_required(VERSION 3.0)
+project(klimbgrades VERSION 0.1)
+
 set(KF5_MIN_VERSION "5.18.0")
 set(QT_MIN_VERSION "5.15.0")
 
@@ -26,6 +27,10 @@ find_package(KF5Kirigami2 ${KF5_DEP_VERSION} "5.22.0")
 set (CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(src)
+
+if (ANDROID)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/android/version.gradle.in ${CMAKE_BINARY_DIR}/version.gradle)
+endif()
 
 if (IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/po")
     ecm_install_po_files_as_qm(po)
