--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -8,3 +8,6 @@ Dependencies:
     'frameworks/kirigami': '@stable'
     'frameworks/kconfig': '@stable'
     'frameworks/ki18n': '@stable'
+
+Options:
+  require-passing-tests-on: [ '@all' ]
