.kde-ci.yml add libraries/kirigami-addons
klimbgrades built using kdesrc-build does not run if we did not build
libraries/kirigami-addons with kdesrc-build.
kdesrc-build should build all of the "runtime dependencies" of a KDE
git repository that are not "REQUIRED build dependencies"
before actually building that KDE git repository.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -8,6 +8,7 @@ Dependencies:
     'frameworks/kirigami': '@stable'
     'frameworks/kconfig': '@stable'
     'frameworks/ki18n': '@stable'
+    'libraries/kirigami-addons': '@stable'
 
 Options:
   require-passing-tests-on: [ '@all' ]
