--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -2,7 +2,7 @@
     "id": "org.kde.klimbgrades",
     "branch": "master",
     "runtime": "org.kde.Platform",
-    "runtime-version": "5.15-22.08",
+    "runtime-version": "6.6",
     "sdk": "org.kde.Sdk",
     "command": "klimbgrades",
     "tags": ["nightly"],
